Changing fontawesome cdn to 5.8.2 from 4.7.0

--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
     />
-
+    
     <!-- FAVICON
---------------------------------------------------->
+---------------------------------------------------->
     <link rel="icon" href="./assets/images/Ozobia.png" />
 
     <title>Ozobia Nwadibia's Website</title>
@@ -56,10 +59,16 @@
               />
             </div>
             <div class="col-md-8">
-              <h4 class="text-left"><span class="name">About Ozobia Nwadibia</span></h4>
+              <h4 class="text-left">
+                <span class="name">About Ozobia Nwadibia</span>
+              </h4>
               <p class="aboutMe">
-                    Devoted and dedicated techie who greatly appreciates and loves web and software development. Loves coding a lot. A fast and enthusiastic learner willing to take on challenges to better oneself and those around.
-                    Quite passionate about the craft and the general idea of creating something out of nothing, digitally.
+                Devoted and dedicated techie who greatly appreciates and loves
+                web and software development. Loves coding a lot. A fast and
+                enthusiastic learner willing to take on challenges to better
+                oneself and those around. Quite passionate about the craft and
+                the general idea of creating something out of nothing,
+                digitally.
               </p>
             </div>
           </div>
@@ -69,7 +78,9 @@
         <div class="container">
           <div class="row text-center">
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/bookmarks/" target="_blank"
+              <a
+                href="https://ozobianwadibia.github.io/bookmarks/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/bookmarks.png"
@@ -78,7 +89,9 @@
               <h4 class="text-uppercase">Bookmarks</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/score_counter/" target="_blank"
+              <a
+                href="https://ozobianwadibia.github.io/score_counter/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/score.png"
@@ -87,7 +100,9 @@
               <h4 class="text-uppercase">Score Counter</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/si_measurements/" target="_blank"
+              <a
+                href="https://ozobianwadibia.github.io/si_measurements/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/measurements.png"
@@ -99,7 +114,9 @@
 
           <div class="row text-center">
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/Employee-Directory/" target="_blank"
+              <a
+                href="https://ozobianwadibia.github.io/Employee-Directory/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/employee_directory.png"
@@ -108,7 +125,9 @@
               <h4 class="text-uppercase">Employee Directory</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/StockSearch-Application/" target="_blank"
+              <a
+                href="https://ozobianwadibia.github.io/StockSearch-Application/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/stocksearch.png"
@@ -137,15 +156,18 @@
                   >ozobia.cn3@gmail.com</a
                 >
               </p>
-              <button class="btn btn-outline-dark" onclick="changeColor()">View Mode</button>
-              <br> <br>
+              <button class="btn btn-outline-dark" onclick="changeColor()">
+                View Mode
+              </button>
+              <br />
+              <br />
               <a
                 href="https://www.linkedin.com/in/ozobianwadibia"
                 data-toggle="tooltip"
                 data-placement="left"
                 title="LinkedIn"
                 target="_blank"
-                ><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i
+                ><i class="fab fa-linkedin fa-lg" aria-hidden="true"></i
               ></a>
               <a
                 href="https://twitter.com/ozobianwadibia"
@@ -153,7 +175,7 @@
                 data-placement="bottom"
                 title="Twitter"
                 target="_blank"
-                ><i class="fa fa-twitter fa-lg" aria-hidden="true"></i
+                ><i class="fab fa-twitter fa-lg" aria-hidden="true"></i
               ></a>
               <a
                 href="https://github.com/ozobianwadibia"
@@ -161,7 +183,7 @@
                 data-placement="right"
                 title="Github"
                 target="_blank"
-                ><i class="fa fa-github fa-lg" aria-hidden="true"></i
+                ><i class="fab fa-github fa-lg" aria-hidden="true"></i
               ></a>
             </div>
           </div>
@@ -170,7 +192,11 @@
       </article>
       <!-- This is the icon for the scroll function -->
       <a href="#" onclick="scrollUp()" id="btn"
-        ><i id="scrollButton" class="fa fa-arrow-circle-up" aria-hidden="true"></i
+        ><i
+          id="scrollButton"
+          class="fa fa-arrow-circle-up"
+          aria-hidden="true"
+        ></i
       ></a>
     </main>
 
