--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link
       rel="stylesheet"
-      href="assets/bootstrap/bootstrap_css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/portfolio.css" />
 
-    <!-- FONTS
+    <!-- FONTS & FONTAWESOME
 ------------------------------------------------------------------->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
@@ -218,38 +220,9 @@
       <!-- container-fluid -->
     </footer>
 
-    <script>
-      // When the user scrolls down 20px from the top of the document, show the button
-      window.onscroll = function() {
-        scrollFunction();
-      };
-
-      function scrollFunction() {
-        if (
-          document.body.scrollTop > 20 ||
-          document.documentElement.scrollTop > 20
-        ) {
-          document.getElementById("btn").style.display = "block";
-        } else {
-          document.getElementById("btn").style.display = "none";
-        }
-      }
-      // When the user clicks on the button, scroll to the top of the document
-      function scrollUp() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-      }
-    </script>
-
-    <script src="js/jQuery.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="assets/bootstrap/bootstrap_js/bootstrap.min.js"></script>
-    <script>
-      // JQuery code for the tooltip (social media buttons)
-      $(document).ready(function() {
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/portfolio.js"></script>
   </body>
 </html>
