Removing anchor tag attribute - target='blank'

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 ---------------------------------------------------->
     <link rel="icon" href="./assets/images/Ozobia.png" />
 
+    <!-- NEW TAB FOR ALL LINKS
+    ---------------------->
+    <base target="_blank" />
+
     <title>Ozobia Nwadibia's Website</title>
   </head>
 
@@ -80,9 +84,7 @@
         <div class="container">
           <div class="row text-center">
             <div class="col-md-4">
-              <a
-                href="https://ozobianwadibia.github.io/bookmarks/"
-                target="_blank"
+              <a href="https://ozobianwadibia.github.io/bookmarks/"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/bookmarks.png"
@@ -91,9 +93,7 @@
               <h4 class="text-uppercase">Bookmarks</h4>
             </div>
             <div class="col-md-4">
-              <a
-                href="https://ozobianwadibia.github.io/score_counter/"
-                target="_blank"
+              <a href="https://ozobianwadibia.github.io/score_counter/"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/score.png"
@@ -102,9 +102,7 @@
               <h4 class="text-uppercase">Score Counter</h4>
             </div>
             <div class="col-md-4">
-              <a
-                href="https://ozobianwadibia.github.io/si_measurements/"
-                target="_blank"
+              <a href="https://ozobianwadibia.github.io/si_measurements/"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/measurements.png"
@@ -116,9 +114,7 @@
 
           <div class="row text-center">
             <div class="col-md-4">
-              <a
-                href="https://ozobianwadibia.github.io/Employee-Directory/"
-                target="_blank"
+              <a href="https://ozobianwadibia.github.io/Employee-Directory/"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/employee_directory.png"
@@ -129,7 +125,6 @@
             <div class="col-md-4">
               <a
                 href="https://ozobianwadibia.github.io/StockSearch-Application/"
-                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/stocksearch.png"
@@ -138,7 +133,7 @@
               <h4 class="text-uppercase">Stocksearch Application</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://lit-castle-43645.herokuapp.com/" target="_blank"
+              <a href="https://lit-castle-43645.herokuapp.com/"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/kudos.png"
@@ -171,7 +166,6 @@
                 data-toggle="tooltip"
                 data-placement="left"
                 title="LinkedIn"
-                target="_blank"
                 ><i class="fab fa-linkedin fa-lg" aria-hidden="true"></i
               ></a>
               <a
@@ -179,7 +173,6 @@
                 data-toggle="tooltip"
                 data-placement="bottom"
                 title="Twitter"
-                target="_blank"
                 ><i class="fab fa-twitter fa-lg" aria-hidden="true"></i
               ></a>
               <a
@@ -187,7 +180,6 @@
                 data-toggle="tooltip"
                 data-placement="right"
                 title="Github"
-                target="_blank"
                 ><i class="fab fa-github fa-lg" aria-hidden="true"></i
               ></a>
             </div>
