Remove base tag from head

--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
 ---------------------------------------------------->
     <link rel="icon" href="./assets/images/Ozobia.png" />
 
-    <!-- NEW TAB FOR ALL LINKS
-    ---------------------->
-    <base target="_blank" />
-
     <title>Ozobia Nwadibia's Website</title>
   </head>
 
@@ -84,7 +80,9 @@
         <div class="container">
           <div class="row text-center">
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/bookmarks/"
+              <a
+                href="https://ozobianwadibia.github.io/bookmarks/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/bookmarks.png"
@@ -93,7 +91,9 @@
               <h4 class="text-uppercase">Bookmarks</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/score_counter/"
+              <a
+                href="https://ozobianwadibia.github.io/score_counter/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/score.png"
@@ -102,7 +102,9 @@
               <h4 class="text-uppercase">Score Counter</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/si_measurements/"
+              <a
+                href="https://ozobianwadibia.github.io/si_measurements/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/measurements.png"
@@ -114,7 +116,9 @@
 
           <div class="row text-center">
             <div class="col-md-4">
-              <a href="https://ozobianwadibia.github.io/Employee-Directory/"
+              <a
+                href="https://ozobianwadibia.github.io/Employee-Directory/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/employee_directory.png"
@@ -125,6 +129,7 @@
             <div class="col-md-4">
               <a
                 href="https://ozobianwadibia.github.io/StockSearch-Application/"
+                target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/stocksearch.png"
@@ -133,7 +138,7 @@
               <h4 class="text-uppercase">Stocksearch Application</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://lit-castle-43645.herokuapp.com/"
+              <a href="https://lit-castle-43645.herokuapp.com/" target="_blank"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/kudos.png"
@@ -163,6 +168,7 @@
               <br />
               <a
                 href="https://www.linkedin.com/in/ozobianwadibia"
+                target="_blank"
                 data-toggle="tooltip"
                 data-placement="left"
                 title="LinkedIn"
@@ -170,6 +176,7 @@
               ></a>
               <a
                 href="https://twitter.com/ozobianwadibia"
+                target="_blank"
                 data-toggle="tooltip"
                 data-placement="bottom"
                 title="Twitter"
@@ -177,6 +184,7 @@
               ></a>
               <a
                 href="https://github.com/ozobianwadibia"
+                target="_blank"
                 data-toggle="tooltip"
                 data-placement="right"
                 title="Github"
