Adding animation to project pics

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               <a
                 href="https://ozobianwadibia.github.io/bookmarks/"
                 target="_blank"
+                class="projectPic"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/bookmarks.png"
@@ -94,6 +95,7 @@
               <a
                 href="https://ozobianwadibia.github.io/score_counter/"
                 target="_blank"
+                class="projectPic"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/score.png"
@@ -105,6 +107,7 @@
               <a
                 href="https://ozobianwadibia.github.io/si_measurements/"
                 target="_blank"
+                class="projectPic"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/measurements.png"
@@ -119,6 +122,7 @@
               <a
                 href="https://ozobianwadibia.github.io/Employee-Directory/"
                 target="_blank"
+                class="projectPic"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/employee_directory.png"
@@ -130,6 +134,7 @@
               <a
                 href="https://ozobianwadibia.github.io/StockSearch-Application/"
                 target="_blank"
+                class="projectPic"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/stocksearch.png"
@@ -138,7 +143,9 @@
               <h4 class="text-uppercase">Stocksearch Application</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://lit-castle-43645.herokuapp.com/" target="_blank"
+              <a href="https://lit-castle-43645.herokuapp.com/" 
+              target="_blank"
+              class="projectPic"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/kudos.png"
