Removing 'view button' and adding a switch

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/portfolio.css" />
+    <link rel="stylesheet" href="css/switch.css" />
 
     <!-- FONTS & FONTAWESOME
 ------------------------------------------------------------------->
@@ -143,9 +144,10 @@
               <h4 class="text-uppercase">Stocksearch Application</h4>
             </div>
             <div class="col-md-4">
-              <a href="https://lit-castle-43645.herokuapp.com/" 
-              target="_blank"
-              class="projectPic"
+              <a
+                href="https://lit-castle-43645.herokuapp.com/"
+                target="_blank"
+                class="projectPic"
                 ><img
                   class="img-fluid border border-dark"
                   src="assets/images/kudos.png"
@@ -165,12 +167,16 @@
                   >ozobia.cn3@gmail.com</a
                 >
               </p>
-              <button
-                class="btn btn-outline-dark"
-                onclick="changeBodyColor(); changeScrollButton(); changeFooterColor()"
-              >
-                View Mode
-              </button>
+              <h6 class="font-weight-bold small text-uppercase mt-5">
+                Toggle View
+              </h6>
+              <label class="switch">
+                <input
+                  onclick="changeBodyColor(); changeScrollButton(); changeFooterColor()"
+                  type="checkbox"
+                />
+                <span class="slider"></span>
+              </label>
               <br />
               <br />
               <a
